[permissionmanager] removed openRoleEdior function; changed searchFieldFunction() to use jQuery; fixed checkboxes in roleeditor not selecting on a click on the label; added selected row highlighting; disabled buttons if there are no users/roles selected; made role badges in user/location tables clickable; added phpdoc comments to most php functions;

--- a/modules-available/permissionmanager/templates/locationstable.html
+++ b/modules-available/permissionmanager/templates/locationstable.html
@@ -26,7 +26,7 @@
 					<td>{{locationpad}} {{locationname}}</td>
 					<td>
 						{{#roles}}
-						<span class="label label-default customSpanMargin roleid-{{roleid}}">{{rolename}}</span>
+						<a href="?do=permissionmanager&show=roleEditor&cancel=locations&roleid={{roleid}}" class="label label-default customSpanMargin roleid-{{roleid}}">{{rolename}}</a>
 						{{/roles}}
 					</td>
 				</tr>
