--- a/modules-available/permissionmanager/templates/treepanel.html
+++ b/modules-available/permissionmanager/templates/treepanel.html
@@ -1,11 +1,11 @@
-<div class='panel panel-primary tree-panel'>
-	<div class='panel-heading'>
-		<div class='checkbox'>
-			<input name='{{checkboxname}}[]' value='{{id}}' type='checkbox' class='form-control' {{#selected}}checked{{/selected}}>
-			<label>{{name}}</label>
+<div class="panel panel-primary tree-panel">
+	<div class="panel-heading">
+		<div class="checkbox">
+			<input id="{{id}}" name="{{checkboxname}}[]" value="{{id}}" type="checkbox" class="form-control" {{#selected}}checked{{/selected}}>
+			<label for="{{id}}">{{name}}</label>
 		</div>
 	</div>
-	<div class='panel-body'>
+	<div class="panel-body">
 		<div class="tree-container" style="padding-left: 20px; padding-right: 20px;">
 			{{{HTML}}}
 		</div>
