[serversetup-bwlp] added permissions to edit boot address and menu and to download the usb image

--- a/modules-available/serversetup-bwlp/templates/ipaddress.html
+++ b/modules-available/serversetup-bwlp/templates/ipaddress.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default {{^editAllowed}}disabledPanel{{/editAllowed}}">
 	<div class="panel-heading">
 		{{lang_bootAddress}}
 	</div>
