[exams] reworked permission system from "click and you get error" to "button is disabled due to lack of permission". you now can only add/delete/edit based on locations you have permission for. you need permission for all locations of an exam to edit/delete it, but you can see it if you have at least permission for one of the locations.

--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -19,7 +19,7 @@
 				</div>
 				<select id="locations" multiple name="locations[]">
 					{{#locations}}
-					<option value="{{locationid}}" {{#selected}}selected{{/selected}}>{{locationpad}} {{locationname}}</option>
+					<option value="{{locationid}}" {{disabled}} {{#selected}}selected{{/selected}}>{{locationpad}} {{locationname}}</option>
 					{{/locations}}
 				</select>
 			</div>
