[statistics_reporting] Query rewrite: Use iterative approach
Several simple test cases yielded incorrect results, also
sessions partially overlapping with the selected hours
were not handled properly. Iterative processing of logged events
instead of single humongous unmaintainable SQL query.

--- a/modules-available/statistics_reporting/style.css
+++ b/modules-available/statistics_reporting/style.css
@@ -36,3 +36,12 @@
     text-align: center;
     line-height: 1.6em;
 }
+
+.table-nowrap td {
+    white-space: nowrap;
+}
+
+td.p-addon {
+    padding: 5px 5px 5px 0 !important;
+    text-align: right;
+}
