[statistics] Add filters for uptime and hostname
Closes #3278

--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -99,7 +99,9 @@ var slxFilterNames = {
 	state: '{{lang_usageState}}',
 	location: '{{lang_location}}',
 	currentuser: '{{lang_currentUser}}',
-	subnet: '{{lang_subnet}}'
+	subnet: '{{lang_subnet}}',
+	runtime: '{{lang_runtimeHours}}',
+	hostname: '{{lang_hostname}}'
 };
 
 slxLocations = {{{locations}}};
