--- a/modules-available/statistics_reporting/templates/table-client.html
+++ b/modules-available/statistics_reporting/templates/table-client.html
@@ -2,7 +2,7 @@
 	<thead>
 	<tr>
 		<th data-sort="string">{{lang_hostname}}</th>
-		<th data-sort="string" class="col_locationname">{{lang_location}}</th>
+		<th data-sort="string" class="col_locationname">{{lang_locationname}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_totalTime">{{lang_totalTime}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_medianSessionLength">{{lang_medianSessionLength}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_longSessions">{{lang_longSessions}}</th>
