--- a/modules-available/statistics_reporting/templates/table-location.html
+++ b/modules-available/statistics_reporting/templates/table-location.html
@@ -1,7 +1,7 @@
 <table id="table-perlocation" class="table table-condensed table-striped table-nowrap stupidtable">
 	<thead>
 	<tr>
-		<th data-sort="string">{{lang_location}}</th>
+		<th data-sort="string">{{lang_locationname}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_totalTime">{{lang_totalTime}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_medianSessionLength">{{lang_medianSessionLength}}</th>
 		<th data-sort="int" data-sort-default="desc" class="col_longSessions">{{lang_longSessions}}</th>
