[translations] Focus first untranslated tag

--- a/modules-available/translation/templates/edit.html
+++ b/modules-available/translation/templates/edit.html
@@ -35,10 +35,10 @@
 
 				<td class="col-sm-4" id="tagid-{{tagid}}">
 					{{^big}}
-					<input type="text" class="form-control switchable" value="{{translation}}" ondblclick="slxMb(this)" name="lang#!#{{tag}}" placeholder="{{placeholder}}">
+					<input type="text" class="form-control switchable {{#missing}}txt-empty{{/missing}}" value="{{translation}}" ondblclick="slxMb(this)" name="lang#!#{{tag}}" placeholder="{{placeholder}}">
 					{{/big}}
 					{{#big}}
-					<textarea rows="3" class="form-control" name="lang#!#{{tag}}" placeholder="{{placeholder}}">{{translation}}</textarea>
+					<textarea rows="3" class="form-control {{#missing}}txt-empty{{/missing}}" name="lang#!#{{tag}}" placeholder="{{placeholder}}">{{translation}}</textarea>
 					{{/big}}
 				</td>
 
@@ -120,5 +120,9 @@
 		ta.val(old.val());
 		old.replaceWith(ta);
 	}
+
+	document.addEventListener('DOMContentLoaded', function () {
+		$('.txt-empty').first().focus();
+	});
 
 </script>
