[statistics] Add "replace machines" feature (not linked to anywhere yet)

--- a/modules-available/statistics/templates/page-replace.html
+++ b/modules-available/statistics/templates/page-replace.html
@@ -17,6 +17,10 @@
 	}
 </style>
 
+<p>
+	{{lang_replaceInstructions}}
+</p>
+
 <form method="post" action="?do=statistics&amp;show=replace">
 	<input type="hidden" name="token" value="{{token}}">
 	<table class="reptable">
