[permissionmanager] Sanitize language tag names

--- a/modules-available/permissionmanager/templates/locationstable.html
+++ b/modules-available/permissionmanager/templates/locationstable.html
@@ -15,8 +15,8 @@
 		<table id="locationsTable" class="table table-condensed table-hover stupidtable dataTable">
 			<thead>
 				<tr>
-					<th data-sort="string">{{lang_Locations}}</th>
-					<th>{{lang_Roles}}</th>
+					<th data-sort="string">{{lang_locations}}</th>
+					<th>{{lang_roles}}</th>
 				</tr>
 			</thead>
 
