--- a/modules-available/permissionmanager/templates/rolestable.html
+++ b/modules-available/permissionmanager/templates/rolestable.html
@@ -17,9 +17,9 @@
 			<table class="table table-condensed table-hover stupidtable">
 				<thead>
 					<tr>
-						<th data-sort="string">{{lang_Roles}}</th>
-						<th class="text-center">{{lang_Edit}}</th>
-						<th class="text-center">{{lang_Delete}}</th>
+						<th data-sort="string">{{lang_roles}}</th>
+						<th class="text-center">{{lang_edit}}</th>
+						<th class="text-center">{{lang_delete}}</th>
 					</tr>
 				</thead>
 
@@ -47,7 +47,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">{{lang_Delete}}</h4>
+					<h4 class="modal-title" id="myModalLabel">{{lang_delete}}</h4>
 				</div>
 				<div class="modal-body">
 					{{lang_deleteCheck}}
@@ -55,7 +55,7 @@
 				<div class="modal-footer">
 					<input type="hidden" id="deleteId" name="deleteId" value=""/>
 					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-					<button type="submit" name="action" value="deleteRole" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> {{lang_Delete}}</button>
+					<button type="submit" name="action" value="deleteRole" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> {{lang_delete}}</button>
 				</div>
 			</div>
 		</div>
