--- a/modules-available/permissionmanager/templates/userstable.html
+++ b/modules-available/permissionmanager/templates/userstable.html
@@ -23,9 +23,9 @@
 			<table id="usersTable" class="table table-condensed table-hover stupidtable dataTable">
 				<thead>
 					<tr>
-						<th data-sort="string">{{lang_Users}}</th>
-						<th>{{lang_Roles}}</th>
-						<th data-sort="int" data-sort-default="desc">{{lang_Selected}}</th>
+						<th data-sort="string">{{lang_users}}</th>
+						<th>{{lang_roles}}</th>
+						<th data-sort="int" data-sort-default="desc">{{lang_selected}}</th>
 					</tr>
 				</thead>
 
@@ -65,8 +65,8 @@
 							<table id="addRoleToUserTable" class="table table-condensed table-hover stupidtable">
 								<thead>
 									<tr>
-										<th data-sort="string">{{lang_Roles}}</th>
-										<th data-sort="int" data-sort-default="desc">{{lang_Selected}}</th>
+										<th data-sort="string">{{lang_roles}}</th>
+										<th data-sort="int" data-sort-default="desc">{{lang_selected}}</th>
 									</tr>
 								</thead>
 
@@ -108,8 +108,8 @@
 							<table id="removeRoleFromUserTable" class="table table-condensed table-hover stupidtable">
 								<thead>
 									<tr>
-										<th data-sort="string">{{lang_Roles}}</th>
-										<th data-sort="int" data-sort-default="desc">{{lang_Selected}}</th>
+										<th data-sort="string">{{lang_roles}}</th>
+										<th data-sort="int" data-sort-default="desc">{{lang_selected}}</th>
 									</tr>
 								</thead>
 
