--- a/modules-available/permissionmanager/templates/_page.html
+++ b/modules-available/permissionmanager/templates/_page.html
@@ -8,17 +8,17 @@
 					<div class="btn-group">
 						<button class="btn btn-default {{rolesButtonClass}}" type="submit" name="show" value="roles">
 							<span class="glyphicon glyphicon-education"></span>
-							{{lang_Roles}}
+							{{lang_roles}}
 						</button>
 
 						<button class="btn btn-default {{usersButtonClass}}" type="submit" name="show" value="users">
 							<span class="glyphicon glyphicon-user"></span>
-							{{lang_Users}}
+							{{lang_users}}
 						</button>
 
 						<button class="btn btn-default {{locationsButtonClass}}" type="submit" name="show" value="locations">
 							<span class="glyphicon glyphicon-home"></span>
-							{{lang_Locations}}
+							{{lang_locations}}
 						</button>
 					</div>
 				</form>
